--- a/Day 2/Day2.ipynb
+++ b/Day 2/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,31 @@
     "\n",
     "def checkPassword2(line):\n",
     "    position, (letter, nn), passw = line.replace('\\n','').split(' ')\n",
-    "    firstPos, secondPos = limit.split('-')    \n",
+    "    firstPos, secondPos = position.split('-')    \n",
     "    return [passw[int(firstPos)-1], passw[int(secondPos)-1]].count(letter) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NUMBER OF VALID PASSWORD FOR FIRST RULE: 418\n",
+      "Wall time: 4.99 ms\n",
+      "NUMBER OF VALID PASSWORD FOR SECOND RULE: 616\n",
+      "Wall time: 5 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NUMBER OF VALID PASSWORD\n",
+    "\n",
+    "%time print(\"NUMBER OF VALID PASSWORD FOR FIRST RULE:\", sum([int(checkPassword(line)) for line in lines]))\n",
+    "%time print(\"NUMBER OF VALID PASSWORD FOR SECOND RULE:\", sum([int(checkPassword2(line)) for line in lines]))"
    ]
   },
   {
@@ -29,12 +52,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# NUMBER OF VALID PASSWORD\n",
-    "\n",
-    "%time print(\"NUMBER OF VALID PASSWORD FOR FIRST RULE:\", sum([int(checkPassword(line)) for line in lines]))\n",
-    "%time print(\"NUMBER OF VALID PASSWORD FOR SECOND RULE:\", sum([int(checkPassword2(line)) for line in lines]))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
