update bitwise checking

--- a/Day 2/Day2.ipynb
+++ b/Day 2/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +21,14 @@
     "def checkPassword2(line):\n",
     "    position, (letter, nn), passw = line.replace('\\n','').split(' ')\n",
     "    firstPos, secondPos = position.split('-')    \n",
-    "    return [passw[int(firstPos)-1], passw[int(secondPos)-1]].count(letter) == 1"
+    "    return (passw[int(firstPos)-1] == letter) ^ (passw[int(secondPos)-1] == letter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NUMBER OF VALID PASSWORD FOR FIRST RULE: 418\n",
-      "Wall time: 4.99 ms\n",
-      "NUMBER OF VALID PASSWORD FOR SECOND RULE: 616\n",
-      "Wall time: 5 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NUMBER OF VALID PASSWORD\n",
     "\n",
