--- a/Day 2/Day2.ipynb
+++ b/Day 2/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,42 @@
     "inputfile = open('input.sql', 'r') \n",
     "lines = [line for line in inputfile]\n",
     "\n",
-    "def checkPassword(line):\n",
+    "def extractLine(line):\n",
     "    limit, (letter, nn), passw = line.replace('\\n','').split(' ')\n",
-    "    mn, mx = map(int,limit.split('-'))\n",
+    "    mn, mx = map(int,limit.split('-'))    \n",
+    "    return limit, letter, passw, mn, mx\n",
+    "\n",
+    "def checkPassword(line):\n",
+    "    limit, letter, passw, mn, mx = extractLine(line)\n",
     "    count = passw.count(letter)\n",
     "    return (count <= mx) and (count >= mn)    \n",
     "\n",
     "def checkPassword2(line):\n",
-    "    position, (letter, nn), passw = line.replace('\\n','').split(' ')\n",
-    "    firstPos, secondPos = position.split('-')    \n",
-    "    return (passw[int(firstPos)-1] == letter) ^ (passw[int(secondPos)-1] == letter)"
+    "    imit, letter, passw, mn, mx = extractLine(line)   \n",
+    "    return (passw[int(mn)-1] == letter) ^ (passw[int(mx)-1] == letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NUMBER OF VALID PASSWORD FOR FIRST RULE: 418\n",
+      "Wall time: 8 ms\n",
+      "NUMBER OF VALID PASSWORD FOR SECOND RULE: 616\n",
+      "Wall time: 7 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NUMBER OF VALID PASSWORD\n",
+    "\n",
+    "%time print(\"NUMBER OF VALID PASSWORD FOR FIRST RULE:\", len([x for x in [int(checkPassword(line)) for line in lines] if x == True]))\n",
+    "%time print(\"NUMBER OF VALID PASSWORD FOR SECOND RULE:\", sum([int(checkPassword2(line)) for line in lines]))"
    ]
   },
   {
@@ -29,12 +55,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# NUMBER OF VALID PASSWORD\n",
-    "\n",
-    "%time print(\"NUMBER OF VALID PASSWORD FOR FIRST RULE:\", sum([int(checkPassword(line)) for line in lines]))\n",
-    "%time print(\"NUMBER OF VALID PASSWORD FOR SECOND RULE:\", sum([int(checkPassword2(line)) for line in lines]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
