improve pake modulo

--- a/Day 3/Day 3.ipynb
+++ b/Day 3/Day 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,19 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def traverse(right, down):\n",
-    "    return [line[index//down*right] for index, line in enumerate(lines) if index % down == 0].count('#')"
+    "    return [line[index//down % len(lines)] for index, line in enumerate(lines) if index % down == 0].count('#')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# SOAL 1\n",
     "traverse(3,1)"
@@ -36,15 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3700000000\n"
+     ]
+    }
+   ],
    "source": [
     "# SOAL 2\n",
     "result2 = 1\n",
-    "for r,d in [(1,1),(3,1),(5,1),(7,1),(1,2)]:    \n",
-    "    result2 = result2 * traverse(r,d) \n",
-    "    \n",
+    "for r,d in [(1,1),(3,1),(5,1),(7,1),(1,2)]: result2 = result2 * traverse(r,d)     \n",
     "print(result2)"
    ]
   },
