--- a/Day 3/Day 3.ipynb
+++ b/Day 3/Day 3.ipynb
@@ -10,8 +10,7 @@
     "# https://adventofcode.com/2020/day/3\n",
     "\n",
     "inputfile = open('input.sql', 'r')\n",
-    "repater = 100\n",
-    "lines = [line.replace('\\n','')*repater for line in inputfile]"
+    "lines = [line.replace('\\n','') for line in inputfile]"
    ]
   },
   {
@@ -21,7 +20,7 @@
    "outputs": [],
    "source": [
     "def traverse(right, down):\n",
-    "    return [line[index//down % len(lines)] for index, line in enumerate(lines) if index % down == 0].count('#')"
+    "    return [line[index//down*right % len(lines)] for index, line in enumerate(lines) if index % down == 0].count('#')"
    ]
   },
   {
