--- a/Day 11/Day 11.ipynb
+++ b/Day 11/Day 11.ipynb
@@ -106,119 +106,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def checkTop(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row - 1\n",
-    "    while i >= 0:        \n",
-    "        if data[i][col] != \".\":\n",
-    "            return (i, col)\n",
-    "        else:\n",
-    "            i -= 1\n",
+    "def lookAround(data, row, col):\n",
+    "    directions = [(1,0),(0,1),(-1,0),(0,-1),(1,1),(-1,-1),(1,-1),(-1,1)]    \n",
+    "    result = []\n",
+    "    for x, y in directions:        \n",
+    "        seen = False\n",
+    "        i = row + x\n",
+    "        j = col + y\n",
+    "        while not seen:       \n",
+    "            try:\n",
+    "                if data[i][j] != \".\":\n",
+    "                    result.append((i, j))\n",
+    "                    seen = True\n",
+    "                else:\n",
+    "                    i += x\n",
+    "                    j += y\n",
+    "            except:\n",
+    "                break\n",
     "    \n",
-    "    return (-1, -1)\n",
-    "    \n",
-    "def checkBottom(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row + 1\n",
-    "    while i < len(data): \n",
-    "        if data[i][col] != \".\":\n",
-    "            return (i, col)\n",
-    "        else:\n",
-    "            i += 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "\n",
-    "def checkRight(data, row, col):\n",
-    "    seen = False\n",
-    "    j = col + 1\n",
-    "    while j < len(data[row]):        \n",
-    "        if data[row][j] != \".\":\n",
-    "            return (row, j)\n",
-    "        else:\n",
-    "            j += 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "\n",
-    "def checkLeft(data, row, col):\n",
-    "    seen = False\n",
-    "    j = col - 1\n",
-    "    while j >= 0:        \n",
-    "        if data[row][j] != \".\":\n",
-    "            return (row, j)\n",
-    "        else:\n",
-    "            j -= 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "\n",
-    "def checkTopLeft(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row - 1\n",
-    "    j = col - 1\n",
-    "    while j >= 0 or i >= 0:        \n",
-    "        if data[i][j] != \".\":\n",
-    "            return (i, j)\n",
-    "        else:\n",
-    "            j -= 1\n",
-    "            i -= 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "            \n",
-    "def checkTopRight(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row - 1\n",
-    "    j = col + 1\n",
-    "    while j < len(data[row]) or i >= 0:        \n",
-    "        if data[i][j] != \".\":\n",
-    "            return (i, j)\n",
-    "        else:\n",
-    "            j += 1\n",
-    "            i -= 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "            \n",
-    "def checkBottomRight(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row + 1\n",
-    "    j = col + 1\n",
-    "    while j < len(data[row]) or i < len(data):        \n",
-    "        if data[i][j] != \".\":\n",
-    "            return (i, j)\n",
-    "        else:\n",
-    "            j += 1\n",
-    "            i += 1\n",
-    "            \n",
-    "    return (-1, -1)\n",
-    "\n",
-    "def checkBottomLeft(data, row, col):\n",
-    "    seen = False\n",
-    "    i = row + 1\n",
-    "    j = col - 1\n",
-    "    while j >= 0 or i < len(data):        \n",
-    "        if data[i][j] != \".\":\n",
-    "            return (i, j)\n",
-    "        else:\n",
-    "            j -= 1\n",
-    "            i += 1\n",
-    "    \n",
-    "    return (-1, -1)\n"
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tryExcept(method, seats2, row, col):\n",
-    "    try:\n",
-    "        return method(seats2, row, col)\n",
-    "    except:\n",
-    "        return (-1,-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,15 +140,7 @@
     "    \n",
     "    for i in range(len(data)):\n",
     "        for j in range(len(data[i])):   \n",
-    "            adjacents.append(tryExcept(checkTop, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkBottom, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkRight, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkLeft, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkTopLeft, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkTopRight, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkBottomRight, the_data, i,j))\n",
-    "            adjacents.append(tryExcept(checkBottomLeft, the_data, i,j))            \n",
-    "            \n",
+    "            adjacents = lookAround(the_data, i, j)\n",
     "            adjacents_state = [the_data[i][j] for i,j in adjacents if (i >= 0 and j >= 0)]    \n",
     "            \n",
     "            if the_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
@@ -255,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +167,7 @@
        "'ANSWER 2: 26'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
