--- a/Day 11/Day 11.ipynb
+++ b/Day 11/Day 11.ipynb
@@ -15,98 +15,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PROBLEM 1"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getAdjacent(data, row, col):\n",
-    "    result = []\n",
-    "    for i in range(max(0,row-1), min(len(data),row+2)):\n",
-    "        for j in range(max(0,col-1),min(len(data[i]), col+2)):            \n",
-    "            if not (i == row and j == col):\n",
-    "                if data[i][j] != '.': \n",
-    "                    result.append((i,j))\n",
-    "    \n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import copy \n",
     "\n",
-    "def applyRules(the_data):\n",
-    "    data = copy.deepcopy(the_data)\n",
-    "    change_count = 0\n",
-    "    \n",
-    "    for i in range(len(data)):\n",
-    "        for j in range(len(data[i])):\n",
-    "            adjacents = getAdjacent(the_data,i,j)            \n",
-    "            adjacents_state = [the_data[i][j] for i,j in adjacents]    \n",
-    "            \n",
-    "            if the_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
-    "                data[i][j] = '#'\n",
-    "                change_count += 1\n",
-    "                        \n",
-    "            if the_data[i][j] == '#' and adjacents_state.count('#') >= 4:\n",
-    "                data[i][j] = 'L' \n",
-    "                change_count += 1\n",
-    "                                              \n",
-    "    return data, change_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ANSWER 1: 37'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prev_layout = seats\n",
-    "fixed = False\n",
-    "while not fixed:\n",
-    "    prev_layout, chng = applyRules(prev_layout)\n",
-    "    if chng == 0:\n",
-    "        fixed = True\n",
-    "\n",
-    "\"ANSWER 1: \" + str(sum([x.count(\"#\") for x in prev_layout]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PROBLEM 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lookAround(data, row, col):\n",
+    "def lookAround(data, row, col, stop_sign_rule):\n",
     "    directions = [(1,0),(0,1),(-1,0),(0,-1),(1,1),(-1,-1),(1,-1),(-1,1)]    \n",
     "    result = []\n",
     "    for x, y in directions:        \n",
@@ -115,7 +31,7 @@
     "        j = col + y\n",
     "        while not seen:       \n",
     "            try:\n",
-    "                if data[i][j] != \".\":\n",
+    "                if data[i][j] in stop_sign_rule:\n",
     "                    result.append((i, j))\n",
     "                    seen = True\n",
     "                else:\n",
@@ -124,63 +40,79 @@
     "            except:\n",
     "                break\n",
     "    \n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def applyRules2(the_data):\n",
+    "    return result\n",
+    "\n",
+    "def applyRules(the_data, stop_sign_rule, min_adj_seats = 4):\n",
     "    data = copy.deepcopy(the_data)\n",
     "    change_count = 0\n",
-    "    adjacents = []\n",
     "    \n",
     "    for i in range(len(data)):\n",
-    "        for j in range(len(data[i])):   \n",
-    "            adjacents = lookAround(the_data, i, j)\n",
+    "        for j in range(len(data[i])):\n",
+    "            adjacents = lookAround(the_data,i,j, stop_sign_rule)            \n",
     "            adjacents_state = [the_data[i][j] for i,j in adjacents if (i >= 0 and j >= 0)]    \n",
     "            \n",
     "            if the_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
     "                data[i][j] = '#'\n",
     "                change_count += 1\n",
     "                        \n",
-    "            if the_data[i][j] == '#' and adjacents_state.count('#') > 4:\n",
+    "            if the_data[i][j] == '#' and adjacents_state.count('#') >= min_adj_seats:\n",
     "                data[i][j] = 'L' \n",
     "                change_count += 1\n",
-    "            \n",
-    "            adjacents = []\n",
     "                                              \n",
-    "    return data, change_count"
+    "    return data, change_count\n",
+    "\n",
+    "def search_layout(data, stop_sign_rule, min_adj_seats):\n",
+    "    prev_layout = data\n",
+    "    fixed = False\n",
+    "    while not fixed:\n",
+    "        prev_layout, chng = applyRules(prev_layout, stop_sign_rule, min_adj_seats)\n",
+    "        if chng == 0:\n",
+    "            break\n",
+    "    \n",
+    "    return prev_layout, sum([x.count(\"#\") for x in prev_layout])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ANSWER TO PROBLEM 1 AND 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ANSWER 2: 26'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANSWER 1 :37\n",
+      "Wall time: 11 ms\n"
+     ]
     }
    ],
    "source": [
-    "prev_layout = seats\n",
-    "fixed = False\n",
-    "while not fixed:\n",
-    "    prev_layout, chng = applyRules2(prev_layout)\n",
-    "    if chng == 0:\n",
-    "        fixed = True\n",
-    "\n",
-    "\"ANSWER 2: \" + str(sum([x.count(\"#\") for x in prev_layout]))"
+    "%time print(\"ANSWER 1 :\" + str(search_layout(seats, \"L#.\", min_adj_seats = 4)[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANSWER 2 :26\n",
+      "Wall time: 14 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time print(\"ANSWER 2 :\" + str(search_layout(seats, \"L#\", min_adj_seats = 5)[1]))"
    ]
   }
  ],
