--- a/Day 11/Day 11.ipynb
+++ b/Day 11/Day 11.ipynb
@@ -25,48 +25,50 @@
     "def lookAround(data, row, col, stop_sign_rule):\n",
     "    directions = [(1,0),(0,1),(-1,0),(0,-1),(1,1),(-1,-1),(1,-1),(-1,1)]    \n",
     "    result = []\n",
+    "    len_i = len(data)    \n",
+    "    len_j = len(data[0])\n",
     "    for x, y in directions:        \n",
-    "        seen = False\n",
     "        i = row + x\n",
     "        j = col + y\n",
-    "        while not seen:       \n",
-    "            try:\n",
+    "        while True:       \n",
+    "            if (0 <= i < len_i and 0 <= j < len_j):                               \n",
     "                if data[i][j] in stop_sign_rule:\n",
     "                    result.append((i, j))\n",
-    "                    seen = True\n",
+    "                    break\n",
     "                else:\n",
     "                    i += x\n",
     "                    j += y\n",
-    "            except:\n",
+    "            else:\n",
     "                break\n",
-    "    \n",
+    "                \n",
     "    return result\n",
     "\n",
-    "def applyRules(the_data, stop_sign_rule, min_adj_seats = 4):\n",
-    "    data = copy.deepcopy(the_data)\n",
-    "    change_count = 0\n",
+    "def applyRules(original_data, stop_sign_rule, min_adj_seats_rule):\n",
+    "    data = copy.deepcopy(original_data)\n",
+    "    layout_changed = False    \n",
+    "    len_i = len(data)    \n",
+    "    len_j = len(data[0])\n",
     "    \n",
-    "    for i in range(len(data)):\n",
-    "        for j in range(len(data[i])):\n",
-    "            adjacents = lookAround(the_data,i,j, stop_sign_rule)            \n",
-    "            adjacents_state = [the_data[i][j] for i,j in adjacents if (i >= 0 and j >= 0)]    \n",
+    "    for i in range(len_i):\n",
+    "        for j in range(len_j):\n",
+    "            adjacents = lookAround(original_data,i,j, stop_sign_rule)            \n",
+    "            adjacents_state = [original_data[i][j] for i,j in adjacents]    \n",
     "            \n",
-    "            if the_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
+    "            if original_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
     "                data[i][j] = '#'\n",
-    "                change_count += 1\n",
+    "                layout_changed = True\n",
     "                        \n",
-    "            if the_data[i][j] == '#' and adjacents_state.count('#') >= min_adj_seats:\n",
+    "            if original_data[i][j] == '#' and adjacents_state.count('#') >= min_adj_seats_rule:\n",
     "                data[i][j] = 'L' \n",
-    "                change_count += 1\n",
+    "                layout_changed = True\n",
     "                                              \n",
-    "    return data, change_count\n",
+    "    return data, layout_changed\n",
     "\n",
-    "def search_layout(data, stop_sign_rule, min_adj_seats):\n",
+    "def search_layout(data, stop_sign_rule = \"L#.\", min_adj_seats_rule = 4):\n",
     "    prev_layout = data\n",
-    "    fixed = False\n",
-    "    while not fixed:\n",
-    "        prev_layout, chng = applyRules(prev_layout, stop_sign_rule, min_adj_seats)\n",
-    "        if chng == 0:\n",
+    "    while True:\n",
+    "        prev_layout, layout_changed = applyRules(prev_layout, stop_sign_rule, min_adj_seats_rule)\n",
+    "        if not layout_changed:\n",
     "            break\n",
     "    \n",
     "    return prev_layout, sum([x.count(\"#\") for x in prev_layout])\n"
@@ -94,7 +96,7 @@
     }
    ],
    "source": [
-    "%time print(\"ANSWER 1 :\" + str(search_layout(seats, \"L#.\", min_adj_seats = 4)[1]))"
+    "%time print(\"ANSWER 1 :\" + str(search_layout(seats)[1]))"
    ]
   },
   {
@@ -112,8 +114,15 @@
     }
    ],
    "source": [
-    "%time print(\"ANSWER 2 :\" + str(search_layout(seats, \"L#\", min_adj_seats = 5)[1]))"
+    "%time print(\"ANSWER 2 :\" + str(search_layout(seats, \"L#\", min_adj_seats_rule = 5)[1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
