--- a/Day 11/Day 11.ipynb
+++ b/Day 11/Day 11.ipynb
@@ -27,13 +27,14 @@
     "    result = []\n",
     "    len_i = len(data)    \n",
     "    len_j = len(data[0])\n",
+    "    \n",
     "    for x, y in directions:        \n",
     "        i = row + x\n",
     "        j = col + y\n",
     "        while True:       \n",
     "            if (0 <= i < len_i and 0 <= j < len_j):                               \n",
     "                if data[i][j] in stop_sign_rule:\n",
-    "                    result.append((i, j))\n",
+    "                    result.append(data[i][j])\n",
     "                    break\n",
     "                else:\n",
     "                    i += x\n",
@@ -49,16 +50,18 @@
     "    len_i = len(data)    \n",
     "    len_j = len(data[0])\n",
     "    \n",
+    "   \n",
     "    for i in range(len_i):\n",
-    "        for j in range(len_j):\n",
-    "            adjacents = lookAround(original_data,i,j, stop_sign_rule)            \n",
-    "            adjacents_state = [original_data[i][j] for i,j in adjacents]    \n",
+    "        for j in range(len_j):      \n",
+    "            adjacents_state = lookAround(original_data,i,j, stop_sign_rule)    \n",
     "            \n",
+    "            # Rule 1 -> If a seat is empty (L) and there are no occupied seats adjacent to it, the seat becomes occupied.\n",
     "            if original_data[i][j] == 'L' and adjacents_state.count('#') == 0:\n",
     "                data[i][j] = '#'\n",
     "                layout_changed = True\n",
-    "                        \n",
-    "            if original_data[i][j] == '#' and adjacents_state.count('#') >= min_adj_seats_rule:\n",
+    "            \n",
+    "            # Rule 2 -> If a seat is occupied (#) and n seats adjacent to it are also occupied, the seat becomes empty.\n",
+    "            elif original_data[i][j] == '#' and adjacents_state.count('#') >= min_adj_seats_rule:\n",
     "                data[i][j] = 'L' \n",
     "                layout_changed = True\n",
     "                                              \n",
@@ -91,7 +94,7 @@
      "output_type": "stream",
      "text": [
       "ANSWER 1 :37\n",
-      "Wall time: 11 ms\n"
+      "Wall time: 9 ms\n"
      ]
     }
    ],
@@ -109,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "ANSWER 2 :26\n",
-      "Wall time: 14 ms\n"
+      "Wall time: 12 ms\n"
      ]
     }
    ],
