--- a/Day 11/Day 11.ipynb
+++ b/Day 11/Day 11.ipynb
@@ -10,7 +10,7 @@
     "# https://adventofcode.com/2020/day/11\n",
     "\n",
     "# PREPARE DATA\n",
-    "inputfile = open('sample.sql', 'r')\n",
+    "inputfile = open('input.sql', 'r')\n",
     "seats = [list(line.strip()) for line in inputfile]"
    ]
   },
@@ -22,27 +22,30 @@
    "source": [
     "import copy \n",
     "\n",
-    "def lookAround(data, row, col, stop_sign_rule):\n",
-    "    directions = [(1,0),(0,1),(-1,0),(0,-1),(1,1),(-1,-1),(1,-1),(-1,1)]    \n",
-    "    result = []\n",
+    "def lookAround(data, row, col, stop_sign_rule):  \n",
+    "    adjacents = []\n",
     "    len_i = len(data)    \n",
     "    len_j = len(data[0])\n",
     "    \n",
-    "    for x, y in directions:        \n",
-    "        i = row + x\n",
-    "        j = col + y\n",
-    "        while True:       \n",
-    "            if (0 <= i < len_i and 0 <= j < len_j):                               \n",
-    "                if data[i][j] in stop_sign_rule:\n",
-    "                    result.append(data[i][j])\n",
-    "                    break\n",
-    "                else:\n",
-    "                    i += x\n",
-    "                    j += y\n",
-    "            else:\n",
-    "                break\n",
+    "    for x in (-1, 0, 1):\n",
+    "        for y in (-1, 0, 1):\n",
+    "            if x == 0 and y == 0:\n",
+    "                continue\n",
     "                \n",
-    "    return result\n",
+    "            i = row + x\n",
+    "            j = col + y\n",
+    "            while True:                        \n",
+    "                if (0 <= i < len_i and 0 <= j < len_j):                               \n",
+    "                    if data[i][j] in stop_sign_rule:\n",
+    "                        adjacents.append(data[i][j])\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        i += x\n",
+    "                        j += y\n",
+    "                else:\n",
+    "                    break\n",
+    "                \n",
+    "    return adjacents\n",
     "\n",
     "def applyRules(original_data, stop_sign_rule, min_adj_seats_rule):\n",
     "    data = copy.deepcopy(original_data)\n",
@@ -93,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANSWER 1 :37\n",
-      "Wall time: 9 ms\n"
+      "ANSWER 1 :2283\n",
+      "Wall time: 13.9 s\n"
      ]
     }
    ],
@@ -111,21 +114,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANSWER 2 :26\n",
-      "Wall time: 12 ms\n"
+      "ANSWER 2 :2054\n",
+      "Wall time: 11.3 s\n"
      ]
     }
    ],
    "source": [
     "%time print(\"ANSWER 2 :\" + str(search_layout(seats, \"L#\", min_adj_seats_rule = 5)[1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
