add missing lines

--- a/Day 12/Day 12.ipynb
+++ b/Day 12/Day 12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "# MATRICES HELPER FOR VECTOR TRANSFORMATION\n",
+    "\n",
+    "moves = {\n",
+    "    \"N\": np.array([0,1]),\n",
+    "    \"S\": np.array([0,-1]),\n",
+    "    \"W\": np.array([-1,0]),\n",
+    "    \"E\": np.array([1,0])\n",
+    "}\n",
+    "\n",
+    "rotation = {\n",
+    "    90: np.array([[0,-1],[1,0]]),\n",
+    "    180: np.array([[-1,0],[0,-1]]),\n",
+    "    270: np.array([[0,1],[-1,0]])\n",
+    "}"
    ]
   },
   {
@@ -32,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +81,7 @@
        "1441"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +117,14 @@
     "\n",
     "            waypoint = np.matmul(waypoint, rotation[value])\n",
     "        elif key in \"NSEW\":\n",
-    "            waypoint += moves[key] * value     \n",
-    "\n",
+    "            waypoint += moves[key] * value  \n",
+    "    \n",
     "    return sum(map(abs,position))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +133,7 @@
        "61616"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
