--- a/Day 12/Day 12.ipynb
+++ b/Day 12/Day 12.ipynb
@@ -9,9 +9,12 @@
     "# ADVENT OF CODE\n",
     "# https://adventofcode.com/2020/day/12\n",
     "\n",
+    "# LOAD LIBRARIES\n",
+    "import numpy as np\n",
+    "\n",
     "# PREPARE DATA\n",
     "inputfile = open('input.sql', 'r')\n",
-    "navs = [line.strip() for line in inputfile]"
+    "navs = [(nav[0],int(nav[1:])) for nav in [line.strip() for line in inputfile]]"
    ]
   },
   {
@@ -20,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "# MATRICES HELPER FOR VECTOR TRANSFORMATION\n",
+    "# https://en.wikipedia.org/wiki/Rotation_matrix#Common_rotations\n",
     "\n",
     "moves = {\n",
     "    \"N\": np.array([0,1]),\n",
@@ -53,17 +56,11 @@
     "def calculateManhatanDistance(data, start_position = [0,0], start_direction = [1,0]):\n",
     "    direction = np.array(start_direction)\n",
     "    position = np.array(start_position)\n",
-    "    for nav in data:    \n",
-    "        key = nav[0] \n",
-    "        value = int(nav[1:])\n",
+    "    for key, value in data:    \n",
     "        if key == 'F':\n",
     "            position += direction * value\n",
     "        elif key == 'R' or key == 'L':\n",
-    "            #  \"L90\" == R270, \"L180\" == R180, \"L270\" == R90\n",
-    "            if key == \"L\":\n",
-    "                value = 360 - value\n",
-    "\n",
-    "            direction = np.matmul(direction, rotation[value])  \n",
+    "            direction = np.matmul(direction, rotation[value if key==\"R\" else 360 - value])  \n",
     "        elif key in \"NSEW\":\n",
     "            position += moves[key] * value     \n",
     "\n",
@@ -76,6 +73,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "1441"
@@ -87,7 +91,7 @@
     }
    ],
    "source": [
-    "calculateManhatanDistance(navs)"
+    "%time calculateManhatanDistance(navs)"
    ]
   },
   {
@@ -103,19 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateManhatanDistance2(data, start_position = [0,0], waypoint = [0,0]):\n",
+    "def calculateManhatanDistance2(data, start_position = [0,0], start_waypoint = [0,0]):\n",
     "    position = np.array(start_position)\n",
-    "    waypoint = np.array(waypoint)\n",
-    "    for nav in data:    \n",
-    "        key = nav[0] \n",
-    "        value = int(nav[1:])\n",
+    "    waypoint = np.array(start_waypoint)\n",
+    "    for key, value in data:    \n",
     "        if key == 'F':\n",
-    "            position += (waypoint * value)\n",
+    "            position += waypoint * value\n",
     "        elif key == 'R' or key == 'L':\n",
-    "            if key == \"L\":\n",
-    "                value = 360 - value\n",
-    "\n",
-    "            waypoint = np.matmul(waypoint, rotation[value])\n",
+    "            waypoint = np.matmul(waypoint, rotation[value if key==\"R\" else 360 - value])\n",
     "        elif key in \"NSEW\":\n",
     "            waypoint += moves[key] * value  \n",
     "    \n",
@@ -128,6 +127,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 6.02 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "61616"
@@ -139,7 +145,7 @@
     }
    ],
    "source": [
-    "calculateManhatanDistance2(navs, waypoint = [10,1])"
+    "%time calculateManhatanDistance2(navs, start_waypoint = [10,1])"
    ]
   },
   {
