--- a/Day 12/Day 12.ipynb
+++ b/Day 12/Day 12.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "\n",
     "# PREPARE DATA\n",
-    "inputfile = open('input.sql', 'r')\n",
+    "inputfile = open('sample.sql', 'r')\n",
     "navs = [(nav[0],int(nav[1:])) for nav in [line.strip() for line in inputfile]]"
    ]
   },
@@ -23,28 +23,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MATRICES HELPER FOR VECTOR TRANSFORMATION\n",
-    "# https://en.wikipedia.org/wiki/Rotation_matrix#Common_rotations\n",
+    "def calculateManhatanDistance(data, start_position = [0,0], start_direction = [1,0], nav_to_waypoint=False):    \n",
+    "    # since rotations in the puzzle only 90, 180, and 270, this func just define common rotation matrix as a dict\n",
+    "    # https://en.wikipedia.org/wiki/Rotation_matrix#Common_rotations    \n",
+    "    rotation_matrix = { 90: np.array([[0,-1],[1,0]]), 180: np.array([[-1,0],[0,-1]]), 270: np.array([[0,1],[-1,0]])}\n",
+    "    \n",
+    "    moves = { \"N\": np.array([0,1]),  \"S\": np.array([0,-1]), \"W\": np.array([-1,0]), \"E\": np.array([1,0])}\n",
+    "    direction, position = np.array(start_direction), np.array(start_position)\n",
+    "    \n",
+    "    for key, value in data:    \n",
+    "        if key == 'F':\n",
+    "            position += direction * value\n",
+    "        elif key == 'R' or key == 'L':\n",
+    "            direction = np.matmul(direction, rotation_matrix[value if key==\"R\" else 360 - value])  \n",
+    "        elif key in \"NSEW\":\n",
+    "            if nav_to_waypoint:\n",
+    "                direction += moves[key] * value \n",
+    "            else:\n",
+    "                position += moves[key] * value     \n",
+    "            \n",
     "\n",
-    "moves = {\n",
-    "    \"N\": np.array([0,1]),\n",
-    "    \"S\": np.array([0,-1]),\n",
-    "    \"W\": np.array([-1,0]),\n",
-    "    \"E\": np.array([1,0])\n",
-    "}\n",
-    "\n",
-    "rotation = {\n",
-    "    90: np.array([[0,-1],[1,0]]),\n",
-    "    180: np.array([[-1,0],[0,-1]]),\n",
-    "    270: np.array([[0,1],[-1,0]])\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PROBLEM 1"
+    "    return sum(map(abs,position))"
    ]
   },
   {
@@ -53,18 +52,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateManhatanDistance(data, start_position = [0,0], start_direction = [1,0]):\n",
-    "    direction = np.array(start_direction)\n",
-    "    position = np.array(start_position)\n",
-    "    for key, value in data:    \n",
-    "        if key == 'F':\n",
-    "            position += direction * value\n",
-    "        elif key == 'R' or key == 'L':\n",
-    "            direction = np.matmul(direction, rotation[value if key==\"R\" else 360 - value])  \n",
-    "        elif key in \"NSEW\":\n",
-    "            position += moves[key] * value     \n",
+    "#  if we need an advanced rotation matrix we can use numpy to generate it\n",
+    "def make_rotation_matrix(theta):\n",
+    "    theta = np.radians(theta)\n",
+    "    cos, sin = int(np.cos(theta)), int(np.sin(theta))\n",
+    "    R = np.array(((cos, -sin), (sin, cos)))\n",
     "\n",
-    "    return sum(map(abs,position))"
+    "    return R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ANSWER TO PROBLEM 1 & 2"
    ]
   },
   {
@@ -76,13 +77,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1441"
+       "'ANSWER 1 :25'"
       ]
      },
      "execution_count": 4,
@@ -91,69 +92,35 @@
     }
    ],
    "source": [
-    "%time calculateManhatanDistance(navs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PROBLEM 2"
+    "%time \"ANSWER 1 :\" + str(calculateManhatanDistance(navs))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculateManhatanDistance2(data, start_position = [0,0], start_waypoint = [0,0]):\n",
-    "    position = np.array(start_position)\n",
-    "    waypoint = np.array(start_waypoint)\n",
-    "    for key, value in data:    \n",
-    "        if key == 'F':\n",
-    "            position += waypoint * value\n",
-    "        elif key == 'R' or key == 'L':\n",
-    "            waypoint = np.matmul(waypoint, rotation[value if key==\"R\" else 360 - value])\n",
-    "        elif key in \"NSEW\":\n",
-    "            waypoint += moves[key] * value  \n",
-    "    \n",
-    "    return sum(map(abs,position))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.02 ms\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "61616"
+       "'ANSWER 2 :286'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time calculateManhatanDistance2(navs, start_waypoint = [10,1])"
+    "%time \"ANSWER 2 :\" + str(calculateManhatanDistance(navs, start_direction = [10,1], nav_to_waypoint= True))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
