--- a/Day 13/Day 13.ipynb
+++ b/Day 13/Day 13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "# https://adventofcode.com/2020/day/13\n",
     "\n",
     "# PREPARE DATA\n",
-    "inputfile = open('sample.sql', 'r')\n",
+    "inputfile = open('input.sql', 'r')\n",
     "reads = [line.strip() for line in inputfile]"
    ]
   },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ANSWER : 295'"
+       "'ANSWER : 3269'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,53 +65,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findEarliestTimeStamp(start):\n",
-    "    busIDS = sorted([(int(x), i) for i,x in enumerate(reads[1].split(\",\")) if x != 'x'], reverse=True)\n",
-    "    index0 = busIDS[0][1]\n",
-    "    base0 = busIDS[0][0]\n",
-    "    timelapse = start\n",
-    "    while True:              \n",
-    "        timelapse = timelapse + base0            \n",
-    "        test = True\n",
-    "\n",
-    "        for x, i in busIDS[1:]:                    \n",
-    "            test = (timelapse - index0 + i) % x == 0    \n",
-    "            if test == False:                    \n",
+    "def findEarliestTimeStamp():\n",
+    "    busIDS = [(int(x), i) for i,x in enumerate(reads[1].split(\",\")) if x != 'x']\n",
+    "    ts = busIDS[0][0]\n",
+    "    diff = 1\n",
+    "    for x, i in busIDS:        \n",
+    "        while True:            \n",
+    "            if (ts + i) % x == 0:\n",
+    "                diff *= x\n",
     "                break\n",
-    "                        \n",
-    "        if test:\n",
-    "            return timelapse - index0, test"
+    "            else:\n",
+    "                ts += diff                \n",
+    "    return ts\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 20 ms\n"
+      "Wall time: 1e+03 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1068781, True)"
+       "672754131923874"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time findEarliestTimeStamp(0)"
+    "%time findEarliestTimeStamp()"
    ]
   },
   {
