--- a/Day 14/Day 14.ipynb
+++ b/Day 14/Day 14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,8 @@
     "# https://adventofcode.com/2020/day/14\n",
     "\n",
     "# PREPARE DATA\n",
+    "import re\n",
+    "\n",
     "inputfile = open('input.sql', 'r')\n",
     "\n",
     "def translateLine(line):\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,37 +54,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_mask = \"\"\n",
-    "mem = {}\n",
-    "for ins, address, value in operations:    \n",
-    "    if ins == \"SET_MASK\":\n",
-    "        current_mask = value\n",
-    "    elif ins == \"SET_MEM\":\n",
-    "        mem[address] = writeMem(value, current_mask)"
+    "def SumValuesInMemory(operations):\n",
+    "    mem = {}\n",
+    "    for ins, address, value in operations:    \n",
+    "        if ins == \"SET_MASK\":\n",
+    "            current_mask = value\n",
+    "        elif ins == \"SET_MEM\":\n",
+    "            mem[address] = writeToMem(value, current_mask)\n",
+    "    \n",
+    "    return sum(list(mem.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 28 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "18630548206046"
+       "'ANSWER : 18630548206046'"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(list(mem.values()))"
+    "%time \"ANSWER : \" + str(SumValuesInMemory(operations))"
    ]
   },
   {
@@ -94,75 +105,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def applyMask(mask, value):\n",
-    "    value_bin = \"{:0>36b}\".format(value)\n",
-    "    result = []\n",
-    "    \n",
-    "    for i, s in enumerate(mask):\n",
-    "        if s == 'X':\n",
-    "            result.append(\"X\")\n",
-    "        else:\n",
-    "            result.append(str(int(mask[i]) | int(value_bin[i]))) \n",
-    "    \n",
-    "    return \"\".join(result)\n",
-    "\n",
-    "flatten = lambda *n: (e for a in n\n",
-    "    for e in (flatten(*a) if isinstance(a, (tuple, list)) else (a,)))\n",
+    "    return \"\".join([str(int(x) | int(y)) if x != 'X' else 'X' for x,y in list(zip(mask, \"{:0>36b}\".format(value)))])\n",
     "\n",
     "def maskCombination(mask):    \n",
     "    address = []\n",
-    "    if 'X' not in mask:\n",
-    "        return mask\n",
+    "    if 'X' not in mask: return [int(mask,2)]\n",
     "    else:\n",
     "        i = mask.index(\"X\")\n",
-    "        for x in (1,0):\n",
-    "            newmask = mask[:i]+str(x)+mask[i+1:]\n",
-    "            address.append(maskCombination(newmask))\n",
+    "        for x in (1,0): address.extend(maskCombination(mask[:i]+str(x)+mask[i+1:]))\n",
+    "        return address\n",
     "    \n",
-    "        return list(flatten(address))"
+    "def SumValuesInMemory2(operations):\n",
+    "    mem = {}\n",
+    "    for ins, address, value in operations:    \n",
+    "        if ins == \"SET_MASK\":\n",
+    "            current_mask = value\n",
+    "        elif ins == \"SET_MEM\":\n",
+    "            modMask = applyMask(current_mask, address)\n",
+    "            new_addresses = maskCombination(modMask)\n",
+    "            for new_address in new_addresses:\n",
+    "                mem[new_address] = value\n",
+    "    \n",
+    "    return sum(list(mem.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "current_mask = \"\"\n",
-    "mem = {}\n",
-    "\n",
-    "for ins, address, value in operations:    \n",
-    "    if ins == \"SET_MASK\":\n",
-    "        current_mask = value\n",
-    "    elif ins == \"SET_MEM\":\n",
-    "        modMask = applyMask(current_mask, address)\n",
-    "        new_addresses = maskCombination(modMask)\n",
-    "        for new_address in new_addresses:\n",
-    "            mem[int(new_address,2)] = value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 463 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4254673508445"
+       "'ANSWER : 4254673508445'"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(list(mem.values()))"
+    "%time \"ANSWER : \" + str(SumValuesInMemory2(operations))"
    ]
   },
   {
